--- a/style.css
+++ b/style.css
@@ -47,3 +47,15 @@ a{
 	color:#fff;
 	text-decoration: none;
 }
+
+@media only screen and (max-width: 600px) {
+.label{
+	font-size:120px;
+}
+.btn-primary{
+	padding:30px 100px;
+}
+span{
+	font-size:36px;
+}
+}
